# elo-assistant

./: .gitignore  ADAPTIVE-THINKING-ANALYSIS.md  BROWSER-AUTOMATION-IMPLEMENTATION-PLAN.md  BROWSER-AUTOMATION-STATUS.md  CLAUDE-CODE-BROWSER-FEATURES.md  CLAUDE-CODE-BROWSER-IMPLEMENTATION-COMPLETE.md  CLAUDE-CODE-COMPACTION-COMPLETE.md  COMPACTION-IMPLEMENTATION-PLAN.md  COMPARISON.md  COMPETITIVE_ANALYSIS.md  DATA-FLOW-EXPLANATION.md  DIAGNOSTIC-REPORT-2026-02-24.md  FINAL-BUG-CHECK.md  FINAL-VERIFICATION-REPORT.md  FINAL-VERIFICATION.md  HOOK-METRICS-IMPLEMENTATION-PLAN.md  HOW-AUTOMATIC-FEATURES-WORK.md  HYBRID-INTEGRATION-COMPLETE.md  IMPLEMENTATION-PLAN.md  IMPLEMENTATION_PLAN.md  INTEGRATION-STATUS.md  INTERLEAVED-THINKING-ANALYSIS.md  MESSAGE-QUEUE-BUG-FIX.md  MESSAGE-QUEUE-FIX.md  OPENCLAW-INTEGRATION-STATUS.md  PERFECT-IMPLEMENTATION-COMPLETE.md  PROMPT-CACHING-ANALYSIS.md  PROMPT-CACHING-IMPLEMENTATION-COMPLETE.md  PROMPT-CACHING-IMPLEMENTATION-PLAN.md  SESSION-TELEPORT-ANALYSIS.md  SESSION-TELEPORT-COMPLETE.md  SESSION-TELEPORT-IMPLEMENTATION-PLAN.md  SYNCHRONIZATION-ISSUE-ROOT-CAUSE.md  TOOL-EXAMPLES-ANALYSIS.md  TOOL-SEARCH-COMPLETE.md  TOOL-SEARCH-IMPLEMENTATION-PLAN.md  TUI-DISPLAY-SETTINGS.md  TUI-DISPLAY-WORKING.md  TUI-INPUT-FIX.md  TUI-VISIBILITY-GUIDE.md  (+14 more)
.openclaw/: 100_PERCENT_PARITY_COMPLETE.md  100_PERCENT_PARITY_PLAN.md  ALL_CLAUDE_TOOLS_PORTED.md  ARCHITECTURE_PLAN.md  AUTOMATIC_BEHAVIOR_SCOPE.md  AUTOMATIC_MODEL_BEHAVIOR.md  AUTOMATIC_PLAN_MODE_COMPLETE.md  BASH_TOOL_ALREADY_EXISTS.md  BUG_SEARCH_REPORT.md  (+97 more)
src/native/ripgrep-napi/: Cargo.toml
(+21897 files in other folders)
